@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-02-21T16:18:36Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
-  "count_decinc" : [ -0, +1 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2024-02-22T01:03:12Z",
+  "count" : 21,
+  "count_minmax" : [ 1, 21 ],
+  "count_decinc" : [ -0, +21 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
 }
