@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-02-21T16:18:36Z",
+  "timestamp" : "2024-02-22T01:03:12Z",
   "count_outdated" : 3058,
   "uniques_outdated" : 577,
-  "count" : 3095,
-  "uniques" : 588,
+  "count" : 3115,
+  "uniques" : 589,
   "views" : [
     {
       "timestamp": "2024-02-12T00:00:00Z",
@@ -61,12 +61,12 @@
     },
     {
       "timestamp": "2024-02-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 21,
+      "count_minmax": [ 1, 21 ],
+      "count_decinc": [ 0, 21 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
