@@ -1,6 +1,6 @@
 {
-  "count": 37,
-  "uniques": 11,
+  "count": 57,
+  "uniques": 12,
   "views": [
     {
       "timestamp": "2024-02-12T00:00:00Z",
@@ -34,8 +34,8 @@
     },
     {
       "timestamp": "2024-02-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 21,
+      "uniques": 2
     }
   ]
 }
